--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,20 @@
     <string name="updateThemesDB">Обновляем данные категорий</string>
     <string name="errorTitle">Возникла ошибочка</string>
     <string name="errorFreeSpace">К сожалению, на накопителе нет достаточно свободного пространства. Необходимо не менее 100МБ для разворачивания базы...</string>
-    <string name="title_activity_menu">MenuActivity</string>
+    <string name="title_activity_menu">Выбрать категорию</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Открыть меню</string>
+    <string name="navigation_drawer_close">Закрыть меню</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Настройки</string>
+    <string name="action_exit">Выход</string>
+    <string name="action_mark">Оценить</string>
+    <string name="action_share">Поделиться</string>
+    <string name="action_chosen">Избранное</string>
+    <string name="action_search">Поиск</string>
+
+    <string name="title_exit">Выход</string>
+    <string name="text_exit">Закрыть приложение?</string>
+    <string name="Yes">Да</string>
+    <string name="No">Нет</string>
 </resources>
